# VoidCrawl

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DISCLAIMER.md  README.md  api-reference.md  build.sh  clippy.toml  deny.toml  opencode.json  pyproject.toml  renovate.json  rustfmt.toml
.agents/skills/change-planning/: SKILL.md
.agents/skills/repo-orientation/: SKILL.md
.agents/skills/verification-plan/: SKILL.md
.claude/skills/voidcrawl/: DEMO.md  SETUP.md  SKILL.md
.codex/: config.toml
.github/: dive-ci.yml
.github/workflows/: CI.yaml  docker-publish.yml  docs.yaml  lint.yaml  recover-release.yml  release.yml  security.yaml
crates/core/: CORPUS.md  Cargo.toml
crates/core/examples/: download_and_scan.rs  download_via_action.rs
crates/core/src/: antibot.rs  ax.rs  captcha.rs  challenge.rs  error.rs  input.rs  lease.rs  lib.rs  managed_profile.rs  page.rs  pool.rs  profile.rs  response.rs  scanner.rs  session.rs  stealth.rs
crates/core/tests/: antibot_accuracy.rs  ax_tree.rs  captcha_capture.rs  captcha_runtime_loaded.rs  cdp_minimal.rs  download.rs  emulation.rs  integration.rs  managed_profile_registry.rs  profile_lock.rs  scanner.rs  stealth_ua.rs
crates/mcp_server/: Cargo.toml  README.md  pyproject.toml
crates/mcp_server/src/: errors.rs  install.rs  lib.rs  main.rs  server.rs  sessions.rs  state.rs
crates/mcp_server/src/tools/: actions.rs  challenge.rs  download.rs  fetch.rs  introspect.rs  mod.rs  profile_registry.rs  screenshot.rs  session.rs  snapshot.rs  wait.rs
crates/mcp_server/tests/: ax_tools.rs  cross_origin_eval.rs  error_wire_format.rs  snapshot_tools.rs  wait_selector.rs
crates/pyo3_bindings/: Cargo.toml
crates/pyo3_bindings/src/: lib.rs
docker/: .env.example  Dockerfile  Dockerfile.headful  check-outputs.sh  docker-compose.example.yaml  docker-compose.headful.yml  docker-compose.yml  ensure-dns.sh  entrypoint-headful.sh  entrypoint.sh  run-headful.sh
docker/config/: supervisord-headful.conf  supervisord.conf  sway-headful
docs/: antibot.md  api-reference.md  architecture.md  captcha-detection.md  challenge-escalation.md  cross-origin-frames.md  docker-headful.md  docker-mcp.md  getting-started.md  mcp-server.md  profiles.md  stealth.md
docs/experiments/: nodriver-zendriver-parity.md  profile-isolation.md
examples/: accessibility_navigation.py  accessibility_tree.py  actions_demo.py  ahrefs_concurrent_stress.py  antibot_detection.py  basic_navigation.py  concurrent_resource_tabs.py  concurrent_stress_test.py  connect_to_existing_chrome.py  cookies.py  cross_origin_iframe_eval.py  custom_headers_and_proxy.py  debug_session.py  docker_headful.py  dom_and_interaction.py  geolocation_pizza_search.py  geolocation_teleport.py  httpx_vs_voidcrawl.py  javascript_eval.py  manual_challenge_operator.py  multi_page.py  network_logging.py  page_lifecycle.py  profile_split.py  profile_split_headful.py  record_teleport.py  response_capture.py  screenshot_and_pdf.py  stealth_mode.py  turnstile_checkbox_ax.py
scripts/: bench_antibot_cdp.py  bench_cdp_latency.py  generate_api_docs.py  post_bump.sh
tests/: conftest.py  test_actions.py  test_ax_tree.py  test_browser_integration.py  test_cli.py  test_config.py  test_docker_configs.py  test_docker_integration.py  test_generate_api_docs_links.py  test_profiles.py  test_scale.py  test_stealth_source_contract.py
void_crawl/: __init__.py  _ext.pyi  debug.py
void_crawl/actions/: __init__.py  _base.py  _flow.py  _protocol.py
void_crawl/actions/builtin/: __init__.py  click.py  dom.py  hover.py  input.py  scroll.py  wait.py
void_crawl/actions/js/: click_at.js  hover.js  wait_for_selector.js
voidcrawl/: __init__.py  __init__.pyi  _downloads.py  _ext.pyi  contracts.py  debug.py  debug.pyi  overlay.py  profiles.py  recording.py  scale.py  scale.pyi  schema.pyi
voidcrawl/actions/: __init__.py  __init__.pyi  _protocol.py  _protocol.pyi
voidcrawl/actions/builtin/: __init__.py  __init__.pyi  dom.py  dom.pyi  network.py  network.pyi
