[workspace]
members = ["crates/core", "crates/pyo3_bindings"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.86"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_debug_implementations = "warn"
static_mut_refs = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Correctness & Safety
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"
unimplemented = "warn"
# Clean imports & structure
absolute_paths = "deny"
cognitive_complexity = "warn"
# module_item_order = "warn"  # not available in current clippy
# Noise lints — disabled
must_use_candidate = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
missing_docs_in_private_items = "allow"
