[workspace]
members = ["crates/core", "crates/mcp_server", "crates/pyo3_bindings"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.86"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_debug_implementations = "warn"
static_mut_refs = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Correctness & Safety
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"
unimplemented = "warn"
# Clean imports & structure
absolute_paths = "deny"
cognitive_complexity = "warn"
# module_item_order = "warn"  # not available in current clippy
# Noise lints — disabled
must_use_candidate = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
missing_docs_in_private_items = "allow"
# Stylistic pedantic noise: doc backticks on proper nouns (SwiftShader, RADV,
# Cloudflare…), #[must_use] on builder methods returning Self, and local
# items declared after statements are all fine in this codebase.
doc_markdown = "allow"
return_self_not_must_use = "allow"
items_after_statements = "allow"
similar_names = "allow"
doc_lazy_continuation = "allow"
needless_raw_string_hashes = "allow"
too_many_lines = "allow"

# Vendored chromiumoxide with a stealth patch: skip `Runtime.enable` when
# VOIDCRAWL_STEALTH_NO_RUNTIME is set (the CDP automation tell Cloudflare detects).
# Identical to crates.io chromiumoxide 0.9.1 otherwise.
[patch.crates-io]
chromiumoxide = { path = "vendor/chromiumoxide" }
