[package]
name = "void_crawl_core"
version = "0.2.2"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CDP browser automation core for Yosoi"

[lints]
workspace = true

[dependencies]
chromiumoxide = { version = "0.9", default-features = false }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider", "json"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tempfile = "3"
