[package]
name = "void_crawl_core"
version = "0.3.2"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Rust-native CDP browser automation core — stealth-patched headless Chrome, profile leasing, captcha detection"
homepage = "https://github.com/CascadingLabs/VoidCrawl"
repository = "https://github.com/CascadingLabs/VoidCrawl"
documentation = "https://docs.rs/void_crawl_core"
readme = "../../README.md"
keywords = ["chrome", "cdp", "browser", "automation", "stealth"]
categories = ["web-programming", "api-bindings"]

[lints]
workspace = true

[dependencies]
chromiumoxide = { version = "0.9", default-features = false }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider", "json"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tempfile = "3"
fd-lock = "4"
# Content-safety gate for downloads: pure-Rust YARA engine (signatures) +
# magic-byte type detection. Both MIT/Apache-2.0, no external daemon.
yara-x = "1.7"
infer = "0.16"
